deployment/kubernetes-azure/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
  namespace: learningwithai
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MONGO_URI
              value: mongodb://mongodb:27017
            - name: ITEMAI_URL
              value: http://lmstudio:1234
          image: crolaworkplacelearningwithai-argehzhfhjaeagbp.azurecr.io/learningwithai_backend:latest
          name: learningwithai-backend
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
