deployment/kubernetes-azure/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: learningwithai
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: BACKEND_URL
              value: http://bfhye4htbwejd4d9.fz12.alb.azure.com/api
          image: crolaworkplacelearningwithai-argehzhfhjaeagbp.azurecr.io/learningwithai_frontend:latest
          name: learningwithai-frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
