deployment/kubernetes-azure/lmstudio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: lmstudio
  name: lmstudio
  namespace: learningwithai
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 1234
  selector:
    io.kompose.service: lmstudio
