deployment/kubernetes-azure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-01
  namespace: learningwithai
  annotations:
    alb.networking.azure.io/alb-namespace: alb-test-infra
    alb.networking.azure.io/alb-name: alb-test
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: frontend-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
