deployment/kubernetes-azure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: learningwithai
spec:
  parentRefs:
  - name: gateway-01
  rules:
  - backendRefs:
    - name: frontend
      port: 3000
  - backendRefs:
    - name: backend
      port: 8000
    matches:
    - path:
        type: PathPrefix
        value: "/api"
    filters:
    - type: URLRewrite
      urlRewrite: 
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
  # - backendRefs:
  #   - name: lmstudio
  #     port: 1234
  #   matches:
  #   - path:
  #       type: PathPrefix
  #       value: "/lmstudio"
  #   filters:
  #   - type: URLRewrite
  #     urlRewrite: 
  #       path:
  #         type: ReplacePrefixMatch
  #         replacePrefixMatch: /
